add first version to scrap main meals

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     },
     "autoload": {
         "psr-4": {
-            "src\\Presentation\\": "src/Presentation/"
+            "src\\Presentation\\": "src/Presentation/",
+            "src\\Persistence\\\\": "src/Persistence/",
         }
     }
 }
