--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "autoload": {
         "psr-4": {
             "src\\Presentation\\": "src/Presentation/",
-            "src\\Persistence\\\\": "src/Persistence/",
+            "src\\Persistence\\": "src/Persistence/"
         }
     }
 }
