--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
+        "php": ">=8.1",
         "fabpot/goutte": "^4.0",
         "symfony/dom-crawler": "^6.0",
         "symfony/css-selector": "^6.0",
