update sample config

--- a/sample-config.ini
+++ b/sample-config.ini
@@ -1,5 +1,12 @@
 ; This is a sample ini file. Fill the variables, copy and rename the file to "config.ini" and have fun
 
 [general]
+
+; Generate a discord webhook and write the url down. More infos: see discord docs
 discord_webhook_url = ""
+
+; Example: https://www.stw.berlin/mensen/einrichtungen/hochschule-f%C3%BCr-technik-und-wirtschaft-berlin/mensa-htw-treskowallee.html
 studierendenwerk_berlin_mensa_website = ""
+
+; Example: "Monday,Tuesday,Wednesday,Thursday,Friday"
+days_to_fetch = "Monday,Tuesday,Wednesday,Thursday,Friday"
