--- a/sample-config.ini
+++ b/sample-config.ini
@@ -5,8 +5,16 @@
 ; Generate a discord webhook and write the url down. More infos: see discord docs
 discord_webhook_url = ""
 
+; Here you can add the url to the studierendenwerk berlin mealplan
 ; Example: https://www.stw.berlin/mensen/einrichtungen/hochschule-f%C3%BCr-technik-und-wirtschaft-berlin/mensa-htw-treskowallee.html
-studierendenwerk_berlin_mensa_website = ""
+;studierendenwerk_berlin_mensa_website = "https://www.stw.berlin/mensen/einrichtungen/hochschule-f%C3%BCr-technik-und-wirtschaft-berlin/mensa-htw-treskowallee.html"
+studierendenwerk_berlin_mensa_website = "https://martin.techniknews.biz/htw-scraper-test/test-no1.html"
 
+; Add the days where the crawler crawls and notify about meals
 ; Example: "Monday,Tuesday,Wednesday,Thursday,Friday"
-days_to_fetch = "Monday,Tuesday,Wednesday,Thursday,Friday"
+days_to_fetch = "Monday,Tuesday,Wednesday,Thursday,Friday,Saturday,Sunday"
+
+; Here you can add a date that will pause the bot until this date. Leave it empty if you would like to get notified.
+; Expected dateformat: yyyy-mm-dd
+; Example: 2022-08-21
+pause_crawling_until = ""
